<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="activity_label_title">My Nanodegree Apps!</string>
    <string name="button_popular_movies_text">POPULAR MOVIES</string>
    <string name="button_stock_hawk_text">STOCK HAWK</string>
    <string name="button_bigger_text">BUILD IT BIGGER</string>
    <string name="button_material_app_text">MAKE YOUR APP MATERIAL</string>
    <string name="button_ubiquitous_app_text">GO UBIQUITOUS</string>
    <string name="button_capstone_app_text">CAPSTONE</string>
    <string name="toast_message">This button will launch my %1$s app.</string>
</resources>
